--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -11,7 +11,7 @@ body {
 }
 
 .full {
-  background: url(http://placehold.it/1920x1080) no-repeat center center fixed; 
+  background: url(https://s29.postimg.org/bg38umvyf/DSC01698_1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
