--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1584,7 +1584,7 @@ pre code {
 .container {
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
+  margin-right: 0px;
   margin-left: auto;
 }
 @media (min-width: 768px) {
