--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1584,7 +1584,7 @@ pre code {
 .container {
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: 0px;
+  margin-right: auto;
   margin-left: auto;
 }
 @media (min-width: 768px) {
@@ -4990,8 +4990,8 @@ a.badge:focus {
   }
   .container .jumbotron,
   .container-fluid .jumbotron {
-    padding-right: 60px;
-    padding-left: 60px;
+    padding-right: 0px;
+    padding-left: 0px;
   }
   .jumbotron h1,
   .jumbotron .h1 {
