--- a/style.css
+++ b/style.css
@@ -24,3 +24,12 @@ h2 {
 .review {
   margin-bottom: 30px;
 }
+
+/*! For Wedding Party */
+.img-center {
+	margin: 0 auto;
+}
+
+footer {
+    margin: 50px 0;
+}
