--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-  margin-top: 30px;
+  margin-top: 50px;
+	margin-bottom: 50px;
+	background: none;
 }
 
 h1.title {
@@ -33,3 +35,32 @@ h2 {
 footer {
     margin: 50px 0;
 }
+/*! End Wedding Party */
+
+
+/*! For image pages*/
+.full {
+  background: url(https://s29.postimg.org/bg38umvyf/DSC01698_1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.fullvenue {
+  background: url(http://static.wixstatic.com/media/4f70fd_d1b48627b0204769b65c9cf65b5ef498.jpg_srz_960_640_85_22_0.50_1.20_0.00_jpg_srz) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.fullwhere-to-stay {
+  background: url(http://www.hotelvanzandt.com/images/1700-960/geraldines-outdoor-bar-and-pool-view-a77c1803.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/*! End image pages*/
