--- a/style.css
+++ b/style.css
@@ -1,32 +1,17 @@
 body {
-  margin-top: 50px;
+  margin-top: 25px;
 	margin-bottom: 50px;
 	background: none;
 }
 
-h1.title {
-  padding: 0 30px 30px 0;
-}
+
 h2 {
   font-size: 22px;
 }
-.rating {
-  font-size: 0.4em;
-  text-transform: uppercase;
-  border: 1px solid #ccc;
-  padding: 4px;
-  vertical-align: middle;
-}
-.summary h2, .actors h2 {
-  margin-top: 0;
-}
-.actors li {
-  line-height: 24px;
-}
-.review {
-  margin-bottom: 30px;
-}
 
+h3 {
+  margin-bottom: 50px;
+}
 /*! For Wedding Party */
 .img-center {
 	margin: 0 auto;
