--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
 body {
-  margin-top: 25px;
-	margin-bottom: 50px;
-	background: none;
+  margin-top: 0px;
+	margin-bottom: 5px;
 }
 
+h1 {
+  font-size: 20px;
+  background: none;
+  background-size: cover;
+}
 
 h2 {
-  font-size: 22px;
+  font-size: 20px;
 }
 
 h3 {
   margin-bottom: 50px;
 }
+
+p {
+  font-size: 10px;
+}
+
+
+
 /*! For Wedding Party */
 .img-center {
 	margin: 0 auto;
